# ai-dev-kit

./: .databricks-ai-dev-kit.yaml  .gitignore  README.md  install.ps1  install.sh
.claude-plugin/: setup.sh
.test/: SKILL.md  trace-integration-plan.md
ai-dev-project/: CLAUDE.md  setup.sh
databricks-builder-app/: .env.example  .gitignore  README.md  app.yaml  app.yaml.example  pyproject.toml  requirements.txt
databricks-builder-app/alembic/: env.py
databricks-builder-app/client/: vite.config.ts
databricks-builder-app/client/src/components/: FunLoader.tsx  SkillsExplorer.tsx
databricks-builder-app/client/src/components/layout/: Sidebar.tsx
databricks-builder-app/client/src/lib/: api.ts  types.ts  utils.ts
databricks-builder-app/client/src/pages/: DocPage.tsx  ProjectPage.tsx
databricks-builder-app/client/src/styles/: globals.css
databricks-builder-app/scripts/: deploy.sh  setup.sh
databricks-builder-app/scripts/_integration-example/: .env.example  README.md  example_integration.py  requirements.txt  setup.sh
databricks-builder-app/scripts/m2m-communication-example/: app.py  builder_client.py
databricks-builder-app/server/: app.py
databricks-builder-app/server/db/: __init__.py  database.py  models.py
databricks-builder-app/server/routers/: __init__.py  agent.py  skills.py
databricks-builder-app/server/services/: __init__.py  active_stream.py  agent.py  backup_manager.py  skills_manager.py  storage.py  system_prompt.py  title_generator.py  user.py
databricks-tools-core/: .env.test.template  pyproject.toml
databricks-tools-core/databricks_tools_core/: __init__.py  auth.py  client.py  identity.py
databricks-tools-core/databricks_tools_core/agent_bricks/: __init__.py  manager.py
databricks-tools-core/databricks_tools_core/aibi_dashboards/: __init__.py  dashboards.py
databricks-tools-core/databricks_tools_core/compute/: __init__.py  execution.py
databricks-tools-core/databricks_tools_core/file/: __init__.py  volume_files.py  workspace.py
databricks-tools-core/databricks_tools_core/jobs/: jobs.py  models.py  runs.py
databricks-tools-core/databricks_tools_core/lakebase/: __init__.py  catalogs.py  instances.py  synced_tables.py
databricks-tools-core/databricks_tools_core/pdf/: __init__.py  generator.py  llm.py  models.py
databricks-tools-core/databricks_tools_core/serving/: __init__.py  endpoints.py
databricks-tools-core/databricks_tools_core/spark_declarative_pipelines/: __init__.py  pipelines.py  workspace_files.py
databricks-tools-core/databricks_tools_core/sql/: table_stats.py  warehouse.py
databricks-tools-core/databricks_tools_core/sql/sql_utils/: dependency_analyzer.py  executor.py  models.py  parallel_executor.py  table_stats_collector.py
databricks-tools-core/databricks_tools_core/unity_catalog/: __init__.py  catalogs.py  connections.py  functions_uc.py  grants.py  monitors.py  schemas.py  security_policies.py  sharing.py  storage.py  tables.py  tags.py  volume_files.py  volumes.py
databricks-tools-core/databricks_tools_core/vector_search/: __init__.py  endpoints.py  indexes.py
databricks-tools-core/tests/: conftest.py
databricks-tools-core/tests/integration/compute/: test_execution.py
databricks-tools-core/tests/integration/jobs/: conftest.py  test_runs.py
databricks-tools-core/tests/integration/lakebase/: conftest.py  test_catalogs.py  test_instances.py  test_synced_tables.py
databricks-tools-core/tests/integration/pdf/: test_pdf_generation.py
databricks-tools-core/tests/integration/sdp/: test_pipelines.py
databricks-tools-core/tests/integration/sql/: test_sql.py  test_table_stats.py  test_volume_folder_stats.py  test_warehouse.py
databricks-tools-core/tests/integration/unity_catalog/: conftest.py  test_catalogs.py  test_connections.py  test_grants.py  test_monitors.py  test_security_policies.py  test_sharing.py  test_storage.py  test_tags.py  test_volumes.py
databricks-tools-core/tests/integration/vector_search/: conftest.py  test_endpoints.py  test_indexes.py  test_queries.py
databricks-tools-core/tests/unit/: test_identity.py
(+114 files in other folders)
